4796 Fixed xDebug issue, fixed 'covered top site's logo' issue. Paragraph begavior added along with styles to it

--- a/web/themes/custom/subtheme/scss/global-styling.scss
+++ b/web/themes/custom/subtheme/scss/global-styling.scss
@@ -6,7 +6,7 @@ body {
   line-height: 1.3;
   color: $base-color;
   margin: 0 auto;
-  padding: 0 35px !important;
+  padding: 4rem 35px 0 !important;      // crutch
   max-width: 1600px;
 }
 
